# DEPRECATED_bunsan_bacs_single_api

./: CMakeLists.txt
include/bacs/problem/single/api/pb/: intermediate.proto  problem.proto  resource.proto  result.proto  settings.proto  task.proto  testing.proto
include/bacs/single/api/pb/: problem.proto  resource.proto  result.proto  settings.proto  task.proto  testing.proto
proto/: intermediate.proto  problem.proto  resource.proto  result.proto  settings.proto  task.proto  testing.proto
tests/: CMakeLists.txt
